code comit@Rahul
add bread crumb and toolbar button on master and admin module ( Add pages )

--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -32,6 +32,9 @@
 
 <script
 	src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+	
+<script src="https://kit.fontawesome.com/8b41a163ea.js"></script>
+
 
 
 <style>
@@ -39,8 +42,6 @@
 	color: red;
 	font-size: 11px;
 }
-
-
 </style>
 
 </head>
@@ -61,18 +62,33 @@
 
 
 
+						<!-- form start -->
+						<form id="companyDetail" class="wizard wizard-primary" role="form"
+							th:action="@{/companydetail/}" th:object="${company}"
+							method="POST">
 
-						<div class="col-md-12" style="margin-top: 20px;">
+							<div class="col-md-12" style="margin-top: 20px;">
 
-							<div class="box box-primary">
-								<input type="hidden" id="mess" name="mess" th:value="${message}">
-								<div class="box-header with-border">
-									<h3 class="box-title">Company Details</h3>
-								</div>
-								<!-- form start -->
-								<form id="companyDetail" class="wizard wizard-primary"
-									role="form" th:action="@{/companydetail/}"
-									th:object="${company}" method="POST">
+								<div class="box box-primary">
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+									<div class="box-header with-border">
+										<h3 class="box-title">Company Details</h3>
+									</div>
+
+									<div class="box-header with-border text-right"> 
+
+										<button type="submit" id="submit" class="btn btn-primary btn-sm"> <i class="fa fa-hdd-o" aria-hidden="true"></i> Submit</button>
+										<button type="reset" value="reset" class="btn btn-secondary btn-sm"> <i class="fa fa-refresh" aria-hidden="true"></i> Reset</button>
+										
+										<a th:href="@{/companydetail/list}" class="btn btn-success btn-sm"> <i class="fa fa-list" aria-hidden="true"></i> View All</a>
+										
+
+
+									</div>
+
+
+
 									<div class="box-body">
 
 										<div class="container-fluid">
@@ -140,26 +156,29 @@
 
 																	<div class="form-group col-md-4">
 																		<label>Director Name</label> <input type="text"
-																			class="form-control textOnly capitalize" 
+																			class="form-control textOnly capitalize"
 																			th:field="*{dirName}" placeholder="Director Name"
 																			title="director name" />
 																	</div>
 
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">PF Number</label> <input
-																			type="text" class="form-control" pattern="[a-zA-Z0-9-]+"
-																			placeholder="Pf Number" th:field="*{pfNumber}"
-																			title="pf number" onkeypress="return alpha(event)">
+																			type="text" class="form-control"
+																			pattern="[a-zA-Z0-9-]+" placeholder="Pf Number"
+																			th:field="*{pfNumber}" title="pf number"
+																			onkeypress="return alpha(event)">
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputPassword4">Parent Code</label> <input
-																			type="text" class="form-control uppercase" title="parent code"
-																			placeholder="Parent Code"  th:field="*{parentCode}" maxlength='2' >
+																			type="text" class="form-control uppercase"
+																			title="parent code" placeholder="Parent Code"
+																			th:field="*{parentCode}" maxlength='2'>
 																	</div>
 																	<div class="form-group col-md-4">
 																		<label for="inputEmail4">Calculate ESI</label> <select
-																			class="form-control" th:field="*{calculateEsi}" id="calculateEsi"
-																			title="calculate esi" required onchange='selectCalculateEsi()' >
+																			class="form-control" th:field="*{calculateEsi}"
+																			id="calculateEsi" title="calculate esi" required
+																			onchange='selectCalculateEsi()'>
 
 																			<option value="Y">Yes</option>
 																			<option value="N">No</option>
@@ -169,8 +188,9 @@
 																	</div>
 
 																	<div class="form-group col-md-4">
-																		<label for="inputPassword4">ESI Number</label><span style='color:red' >*</span> <input
-																			type="text" class="form-control" title="esi number"
+																		<label for="inputPassword4">ESI Number</label><span
+																			style='color: red'>*</span> <input type="text"
+																			class="form-control" title="esi number"
 																			id="esiNumber" placeholder="Esi Number"
 																			onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;"
 																			th:field="*{esiNo}" required>
@@ -244,7 +264,8 @@
 
 																		<div>
 
-																			<label class="col-md-2 control-label">Address-1<span style='color:red' >*</span></label>
+																			<label class="col-md-2 control-label">Address-1<span
+																				style='color: red'>*</span></label>
 
 																			<div class="col-md-4">
 																				<input type="text" class="form-control"
@@ -317,9 +338,9 @@
 																					th:field="*{cPin}" id="pin1" name="pin1"
 																					title="pin" placeholder="Pin Code" maxlength="6"
 																					onkeyup="pin1Validation()"
-																					oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"> <span
-																					class="error" id="pin1Error" style='display: none'>Pin
-																					Should be 6 digit</span>
+																					oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+																				<span class="error" id="pin1Error"
+																					style='display: none'>Pin Should be 6 digit</span>
 																			</div>
 																		</div>
 
@@ -410,12 +431,7 @@
 
 													<!-- ADD -->
 
-													<div class="box-footer">
-														<button type="submit" class="btn btn-primary" id="submit">Submit</button>
-
-														<button type="reset" class="btn btn-danger" value="Reset">
-															&nbsp;Reset</button>
-													</div>
+													
 												</div>
 												<!-- end company detail tab -->
 
@@ -462,10 +478,10 @@
 															<div class="form-group col-md-4">
 																<label for="inputAddress">Designation</label><span
 																	style="color: red">*</span> <input type="text"
-																	class="form-control textOnly uppercase" id="designation"
-																	name="designation" placeholder="Designation"
-																	th:field="*{rDesig}" title="This field is required"
-																	required>
+																	class="form-control textOnly uppercase"
+																	id="designation" name="designation"
+																	placeholder="Designation" th:field="*{rDesig}"
+																	title="This field is required" required>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputAddress">Flat Number</label> <input
@@ -521,9 +537,9 @@
 																<label for="inputAddress">Pin</label> <input
 																	type="number" class="form-control" id="pin2"
 																	name="pin2" placeholder="Pin" th:field="*{rPin}"
-																	title="pin" onkeyup="pin2Validation()"maxlength="6"
-																	oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"> <span
-																	class="error" id="pin2Error" style='display: none'>Pin
+																	title="pin" onkeyup="pin2Validation()" maxlength="6"
+																	oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+																<span class="error" id="pin2Error" style='display: none'>Pin
 																	Should be 6 digit</span>
 															</div>
 															<div class="form-group col-md-4">
@@ -558,22 +574,23 @@
 																<label for="inputAddress">PAN Number</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="panNumber" name="panNumber"
-																	placeholder="Pan Number" th:field="*{panNumber}" onkeyup="ValidatePAN()"
-																	title="This field is required" required><span id="lblPANCard" class="error" style="display:none ">Invalid PAN
-														Number</span>
+																	placeholder="Pan Number" th:field="*{panNumber}"
+																	onkeyup="ValidatePAN()" title="This field is required"
+																	required><span id="lblPANCard" class="error"
+																	style="display: none">Invalid PAN Number</span>
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputEmail4">GST Number</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="gstNumber" name="gstNumber"
-																	placeholder="Gst Number" th:field="*{tGstNo}" maxlength="15"
-																	title="This field is required" required>
+																	placeholder="Gst Number" th:field="*{tGstNo}"
+																	maxlength="15" title="This field is required" required>
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputPassword4">Taxpayer Legal
 																	Number</label> <input type="text" class="form-control"
 																	id="inputPassword4" placeholder="Taxpayer Legal"
-																	title="taxpayer legal number" 
+																	title="taxpayer legal number"
 																	th:field="*{taxPayerLegalName}">
 															</div>
 															<div class="form-group col-md-6">
@@ -696,15 +713,15 @@
 																	<th scope="row">
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="Company Code" id="insCompanyCode0" readonly
-																				title="company code">
+																				placeholder="Company Code" id="insCompanyCode0"
+																				readonly title="company code">
 																		</fieldset>
 																	</th>
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="Company name" id="insCompanyName0" readonly
-																				title="company name">
+																				placeholder="Company name" id="insCompanyName0"
+																				readonly title="company name">
 																		</fieldset>
 																	</td>
 																	<td>
@@ -731,7 +748,7 @@
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="Description -1"   title="description"
+																				placeholder="Description -1" title="description"
 																				name="insuranceDetail[0].desc1">
 																		</fieldset>
 																	</td>
@@ -814,7 +831,8 @@
 																	<td>
 																		<fieldset>
 																			<input type="number" class="form-control"
-																				placeholder="Approved Budget" title="approval budget"
+																				placeholder="Approved Budget"
+																				title="approval budget"
 																				name="siteOffice[0].approvedBudget" value="0">
 																		</fieldset>
 																	</td>
@@ -847,19 +865,18 @@
 
 
 
-								</form>
 
-								<div class="box-footer">
-									<a th:href="@{/companydetail/list}">view company list</a>
+
+									<div class="box-footer">
+																			</div>
+									<!-- end form -->
 								</div>
-								<!-- end form -->
+
+
+
 							</div>
 
-
-
-						</div>
-
-
+						</form>
 
 
 
