--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head >
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -64,9 +64,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">Category</a></li>
+							<li class="active">Add</li>
 						</ol>
 					</section>
 
@@ -74,30 +74,54 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="categoryForm" role="form" th:action="@{/category/}"
+							method="POST" th:object="${category}">
+							<!-- Default box -->
+							<div class="box">
+
+								<div class="box-header with-border">
+									<!--<h3 class="box-title">Category Master</h3>-->
+
+									<div class="box-header with-border text-right">
+
+										<button type="submit" id="submit"
+											class="btn btn-primary btn-sm">
+											<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+										</button>
+										<button type="reset" value="reset"
+											class="btn btn-secondary btn-sm">
+											<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+										</button>
+
+										<a th:href="@{/category/list}"
+											class="btn btn-success btn-sm"> <i class="fa fa-list"
+											aria-hidden="true"></i> View All
+										</a>
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+									</div>
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="categoryForm" role="form" th:action="@{/category/}"
-												method="POST" th:object="${category}">
+								</div>
+
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+
+
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
@@ -115,8 +139,9 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label class="form-label">Account Head</label>  <select class="form-control"
-															id="" th:field="*{accountHead}"  title="account head" >
+														<label class="form-label">Account Head</label> <select
+															class="form-control" id="" th:field="*{accountHead}"
+															title="account head">
 															<option value="">Select</option>
 															<option value="1">type-1</option>
 															<option value="2">type-2</option>
@@ -134,21 +159,22 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Code</label> <input
-															type="text" class="form-control uppercase  textOnly" maxlength="2" 
-															placeholder="Parent Code" th:field="*{parentCode}"
-															title="parent code">
+															type="text" class="form-control uppercase  textOnly"
+															maxlength="2" placeholder="Parent Code"
+															th:field="*{parentCode}" title="parent code">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Name</label> <input
-															type="text" class="form-control " 
+															type="text" class="form-control "
 															placeholder="Parent Name" th:field="*{parentName}"
 															title="parent name">
 													</div>
 
-												<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked style="margin-left: 5px" >Active <input
-														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
 
 												</div>
@@ -159,25 +185,18 @@
 													<input type="reset" value="Reset" class="btn btn-danger" />
 												</div>
 
-
-											</form>
-
-
+											</div>
+											
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/category/list}">view category</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
-
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
@@ -187,43 +206,37 @@
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
-						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
-			</script>
+			} else {
+				console.log("ajax request : " + message);
+			}
+
+		});
+	</script>
 
 	<script>
+		$("#categoryForm").validate({
+			ignoreTitle : true
+		});
 
-				$("#categoryForm").validate({
-					ignoreTitle: true
-				});
-
-				
-				
-				 $( document ).ready(function() {
-		                $( ".textOnly" ).keypress(function(e) {
-		                    var key = e.keyCode;
-		                    if (key >= 48 && key <= 57) {
-		                        e.preventDefault();
-		                    }
-		                });
-		            });
-				 
-				 
-			</script>
+		$(document).ready(function() {
+			$(".textOnly").keypress(function(e) {
+				var key = e.keyCode;
+				if (key >= 48 && key <= 57) {
+					e.preventDefault();
+				}
+			});
+		});
+	</script>
 
 	<!--   <section class="content">
         
