--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -62,9 +62,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">City</a></li>
+							<li class="active">Add</li>
 						</ol>
 					</section>
 
@@ -72,31 +72,52 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="cityForm" role="form" th:action="@{/city/}"
+							method="POST" th:object="${city}">
+
+							<!-- Default box -->
+							<div class="box">
+
+								<div class="box-header with-border text-right">
+
+									<button type="submit" id="submit"
+										class="btn btn-primary btn-sm">
+										<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+									</button>
+									<button type="reset" value="reset"
+										class="btn btn-secondary btn-sm">
+										<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+									</button>
+
+									<a th:href="@{/city/list}"
+										class="btn btn-success btn-sm"> <i class="fa fa-list"
+										aria-hidden="true"></i> View All
+									</a>
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								</div>
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="cityForm" role="form" th:action="@{/city/}"
-												method="POST" th:object="${city}">
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
@@ -135,8 +156,8 @@
 															type="text" class="form-control" placeholder="district"
 															th:field="*{district}">
 													</div>
-												
-												<!-- 	<div class="form-group col-md-6">
+
+													<!-- 	<div class="form-group col-md-6">
 														<label for="inputEmail4">City Type</label> <input
 															type="text" class="form-control" placeholder="city type"
 															th:field="*{cityType}">
@@ -151,30 +172,20 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
+												
 
-
-											</form>
-
-
+											</div>
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/city/list}">View All City</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
