--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -64,9 +64,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">Employee Info</a></li>
+							<li class="active">Add page</li>
 						</ol>
 					</section>
 
@@ -74,32 +74,53 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="designationForm" role="form"
+							th:action="@{/designation/}" method="POST"
+							th:object="${designation}">
+
+							<div class="box-header with-border text-right">
+
+								<button type="submit" id="submit" class="btn btn-primary btn-sm">
+									<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+								</button>
+								<button type="reset" value="reset"
+									class="btn btn-secondary btn-sm">
+									<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+								</button>
+
+								<a th:href="@{/designation/list}"
+									class="btn btn-success btn-sm"> <i class="fa fa-list"
+									aria-hidden="true"></i> View All
+								</a>
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+							</div>
+
+							<!-- Default box -->
+							<div class="box">
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="designationForm" role="form"
-												th:action="@{/designation/}" method="POST"
-												th:object="${designation}">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
@@ -134,30 +155,22 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
-
-
-											</form>
-
-
+												
+											</div>
+											<!-- /.box -->
+											
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/designation/list}">View All Designation</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
+
 					</section>
 				</section>
 			</div>
