--- a/src/main/resources/templates/layouts/Master/issueSlip.html
+++ b/src/main/resources/templates/layouts/Master/issueSlip.html
@@ -61,7 +61,7 @@
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i>WhareHouse</a></li>
 							<li><a href="#">Issue Slip</a></li>
-							<li class="active">Master</li>
+							<li class="active">Add Page</li>
 
 						</ol>
 					</section>
@@ -70,32 +70,53 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/issueslip/}"
+							th:object="${issueSlip}" method="POST">
+
+							<div class="box-header with-border text-right">
+
+								<button type="submit" id="submit" class="btn btn-primary btn-sm">
+									<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+								</button>
+								<button type="reset" value="reset"
+									class="btn btn-secondary btn-sm">
+									<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+								</button>
+
+								<a th:href="@{/issueslip/list}"
+									class="btn btn-success btn-sm"> <i class="fa fa-list"
+									aria-hidden="true"></i> View All
+								</a>
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
+							</div>
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-									<div class="col-md-12 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
 
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/issueslip/}"
-												th:object="${issueSlip}" method="POST">
+
+										<div class="col-md-12 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 
 												<div class="box">
 													<h5 class="box-title">Issue Details</h5>
@@ -339,8 +360,8 @@
 																		</select></td>
 																		<!-- item code -->
 																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="item0" title="description" readonly></td>
+																			class="form-control form-control-sm" id="item0"
+																			title="description" readonly></td>
 																		<!-- item description  -->
 
 																		<td><select
@@ -359,30 +380,33 @@
 																		<!-- Qty Required  -->
 																		<td><input type="number" id="qtyRequired0"
 																			class="form-control form-control-sm" title="net qty"
-																			name="issueSlipDetails[0].qtyReq" step="0.25" value='0.00' readonly></td>
-																		
+																			name="issueSlipDetails[0].qtyReq" step="0.25"
+																			value='0.00' readonly></td>
+
 																		<!-- Qty Issue   -->
 																		<td><input type="number"
-																			class="form-control form-control-sm"
-																			id="qtyIssue0" step="0.25" title="srNoClaimUnder"
+																			class="form-control form-control-sm" id="qtyIssue0"
+																			step="0.25" title="srNoClaimUnder"
 																			name="issueSlipDetails[0].qtyIssue" value='0.00'></td>
-																	
+
 																		<!-- qty Issue Conversion  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="issueConversion0" title="" step="0.25" style="width: 150px"
+																			id="issueConversion0" title="" step="0.25"
+																			style="width: 150px"
 																			name="issueSlipDetails[0].qtyIssueConv" readonly></td>
 
 																		<!-- qty in stock  -->
 
 																		<td><input type="number"
-																			class="form-control form-control-sm"value='0.00'
-																			id="qtyInStock0" title="" step="0.25" style="width: 150px" readonly></td>
+																			class="form-control form-control-sm" value='0.00'
+																			id="qtyInStock0" title="" step="0.25"
+																			style="width: 150px" readonly></td>
 
 
 																		<!-- issue rate  -->
 																		<td><input type="number"
-																			class="form-control form-control-sm"value='0.00'
+																			class="form-control form-control-sm" value='0.00'
 																			id="issueRate0" title="" style="width: 150px"
 																			name="issueSlipDetails[0].issueRate" step="0.25"></td>
 
@@ -415,28 +439,21 @@
 
 
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
-											</form>
+												
+											</div>
+											<!-- /.box -->
+											
+										</div>
 
 
-										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/issueslip/list}">View All Issue Slip</a>
-										</div>
+
 									</div>
-
-
 
 								</div>
 
 							</div>
+						</form>
 
-						</div>
 					</section>
 				</section>
 			</div>
