--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -54,22 +54,52 @@
 			<div class="wrapper">
 
 				<section class="content-wrapper">
-					<div class="row">
-						<!-- left column -->
+
+					<!-- form start -->
+					<form id="itemMasterForm" role="form" th:action="@{/item/}"
+						method="post" th:object="${item}" novalidate>
+
+
+						<div class="row">
+
+							<!-- left column -->
 
 
 
 
-						<div class="col-md-12" style="margin-top: 20px;">
+							<div class="col-md-12" style="margin-top: 20px;">
 
-							<div class="box box-primary">
-								<input type="hidden" id="mess" name="mess" th:value="${message}">
-								<div class="box-header with-border">
-									<h3 class="box-title">Item Master</h3>
+								
+
+
+								<div class="box box-primary">
+								
+								<div class="box-header with-border text-right">
+
+									<button type="submit" id="submit"
+										class="btn btn-primary btn-sm">
+										<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+									</button>
+									<button type="reset" value="reset"
+										class="btn btn-secondary btn-sm">
+										<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+									</button>
+
+									<a th:href="@{/item/list}" class="btn btn-success btn-sm">
+										<i class="fa fa-list" aria-hidden="true"></i> View All
+									</a>
+
+
+
 								</div>
-								<!-- form start -->
-								<form id="itemMasterForm" role="form" th:action="@{/item/}"
-									method="post" th:object="${item}" novalidate>
+								
+								
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+									<div class="box-header with-border">
+										<h3 class="box-title">Item Master</h3>
+									</div>
+
 
 									<div class="box-body">
 
@@ -103,9 +133,9 @@
 
 																<div class="form-group col-md-4">
 																	<label for="#">Item Code</label> <input type="text"
-																		class="form-control form-control-sm"
-																		title="item code" placeholder="Item Code"
-																		th:field="*{itemCode}" readonly>
+																		class="form-control form-control-sm" title="item code"
+																		placeholder="Item Code" th:field="*{itemCode}"
+																		readonly>
 																</div>
 																<div class="form-group col-md-8">
 																	<label for="inputPassword4">Description</label> <span
@@ -205,8 +235,9 @@
 														</div>
 
 														<div class="form-group col-md-3">
-															<label class="form-label">Inspection Required</label><span style="color:red">*</span> <select
-																class="form-control" title="dol" th:field="*{dol}" required>
+															<label class="form-label">Inspection Required</label><span
+																style="color: red">*</span> <select class="form-control"
+																title="dol" th:field="*{dol}" required>
 																<option value="">Select</option>
 																<option value="Y">Yes</option>
 																<option value="N">No</option>
@@ -216,9 +247,9 @@
 
 
 														<div class="form-group col-md-3">
-															<label class="form-label">Category</label><span style="color:red">*</span> <select
-																class="form-control" title="category"
-																th:field="*{category}" required>
+															<label class="form-label">Category</label><span
+																style="color: red">*</span> <select class="form-control"
+																title="category" th:field="*{category}" required>
 																<option value="">Select Category</option>
 
 																<option th:each="category :  ${listCategory}"
@@ -241,23 +272,20 @@
 
 
 														<div class="form-group" style="margin-left: 14px;">
-															
+
 															<input class="form-check-input p-10" type="checkbox"
-																value="Y" name="bulkIssYn" th:checked="*{bulkIssYn}"> <label class="form-check-label"
-																for="inlineCheckbox1" >Bulk
-																Issueable</label> 
-																
-																<input class="form-check-input"
-																type="checkbox" value="Y" name="pettyItem" th:checked="*{pettyItem}"
-																style="margin-left: 8px;"> <label
-																class="form-check-label" for="inlineCheckbox2">Petty Item</label> 
-																
-																<input
-																class="form-check-input" type="checkbox" value="Y"
-																style="margin-left: 8px;" name="warItemYn" th:checked="*{warItemYn}"> <label
+																value="Y" name="bulkIssYn" th:checked="*{bulkIssYn}">
+															<label class="form-check-label" for="inlineCheckbox1">Bulk
+																Issueable</label> <input class="form-check-input"
+																type="checkbox" value="Y" name="pettyItem"
+																th:checked="*{pettyItem}" style="margin-left: 8px;">
+															<label class="form-check-label" for="inlineCheckbox2">Petty
+																Item</label> <input class="form-check-input" type="checkbox"
+																value="Y" style="margin-left: 8px;" name="warItemYn"
+																th:checked="*{warItemYn}"> <label
 																class="form-check-label" for="inlineCheckbox3">Warranty
 																Item</label>
-																
+
 														</div>
 
 
@@ -313,13 +341,12 @@
 																<div class="form-group col-md-2">
 																	<label for="inputEmail4">Store Code</label> <input
 																		type="email" class="form-control form-control-sm"
-																		id="storeCode"
-																		placeholder="Store Code" title="store code" readonly>
+																		id="storeCode" placeholder="Store Code"
+																		title="store code" readonly>
 																</div>
 																<div class="form-group col-md-4">
 																	<label class="form-label">Store Name</label> <label
-																		style="color: red">*</label> <select
-																		id="storeName"
+																		style="color: red">*</label> <select id="storeName"
 																		class="form-control" title="This field is required"
 																		th:field="*{store}" required onchange="selectStore()">
 																		<option value="">Select</option>
@@ -347,7 +374,7 @@
 
 													<p></p>
 													<p></p>
-<!-- 
+													<!-- 
 													<div class="box">
 
 														<h5>Account Information</h5>
@@ -376,7 +403,7 @@
 													<p></p>
 													<p></p>
 
-											<!-- 		<div class="box">
+													<!-- 		<div class="box">
 
 														<h5>Product Information</h5>
 														<div class="row">
@@ -530,7 +557,7 @@
 																	<th scope="row">
 																		<fieldset>
 																			<input type="text" title="packing code"
-																				class="form-control" placeholder="packing Code" 
+																				class="form-control" placeholder="packing Code"
 																				name="packingDetails[0].packingCode">
 																		</fieldset>
 																	</th>
@@ -546,7 +573,8 @@
 
 
 																			<select class="form-control" title="uom Name"
-																				th:field="*{packingDetails[0].unitName}"  style="width: 180px;">
+																				th:field="*{packingDetails[0].unitName}"
+																				style="width: 180px;">
 																				<option value="">Select</option>
 																				<option th:each="uom :  ${listUom}"
 																					th:text="${uom.unit}" th:value=" ${uom.uomCode}">
@@ -586,10 +614,7 @@
 
 													</div>
 
-													<div class="box-footer">
-														<button type="submit" class="btn btn-primary">Submit</button>
-														<input type="reset" value="Reset" class="btn btn-danger" />
-													</div>
+
 												</div>
 												<!--end packing detail -->
 
@@ -602,19 +627,19 @@
 											</div>
 										</div>
 									</div>
-								</form>
-								<div style="width: parent; text-align-last: right; margin: 8px">
-									<a th:href="@{/item/list}">View All Item</a>
-								</div>
 
+
+
+								</div>
 							</div>
+
+
+
+
+
 						</div>
 
-
-
-
-
-					</div>
+					</form>
 				</section>
 			</div>
 		</div>
@@ -623,89 +648,88 @@
 
 
 	<script>
-				var idIndex = 0;
-				$(document).ready(function () {
-					console.log("item master is ready!");
-					var i = 1;
-					$('#add_row').click(function () {
-						idIndex++;
-						$('#addr' + i).html(
-							"<th scope='row'><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingCode'></fieldset></th>"
-							+ "<td><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingName'></fieldset></td>"
-							+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].unitName'></fieldset></td>"
-							+ "<td><fieldset><input type='number' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].qty'></fieldset></td>"
-							+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].barCode'></fieldset></td>"
-						);
+		var idIndex = 0;
+		$(document)
+				.ready(
+						function() {
+							console.log("item master is ready!");
+							var i = 1;
+							$('#add_row')
+									.click(
+											function() {
+												idIndex++;
+												$('#addr' + i)
+														.html(
+																"<th scope='row'><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingCode'></fieldset></th>"
+																		+ "<td><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingName'></fieldset></td>"
+																		+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].unitName'></fieldset></td>"
+																		+ "<td><fieldset><input type='number' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].qty'></fieldset></td>"
+																		+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].barCode'></fieldset></td>");
 
-						$('#example').append(
-							'<tr id="addr'
-							+ (i + 1)
-							+ '"></tr>');
+												$('#example').append(
+														'<tr id="addr'
+																+ (i + 1)
+																+ '"></tr>');
 
-						i++;
+												i++;
 
-					});
+											});
 
-					$("#delete_row").click(function () {
-						if (i > 1) {
-							$("#addr" + (i - 1)).html('');
-							$('#_cr').val(i - 1);
-							i--;
-							idIndex--;
-						}
-					});
+							$("#delete_row").click(function() {
+								if (i > 1) {
+									$("#addr" + (i - 1)).html('');
+									$('#_cr').val(i - 1);
+									i--;
+									idIndex--;
+								}
+							});
 
-				});
-
-			</script>
-
-	<script>
-
-				$(document).ready(function () {
-					var message = document.getElementById('mess').value
-					if (message != null && message !== "") {
-
-						swal(message, "", "success", {
-							button: "OK",
-							hideClass: {
-								popup: 'animate__animated animate__fadeOutUp'
-							},
 						});
-					} else {
-						console.log("ajax request : " + message);
-					}
-
-				});
-
-
-				function getUomNameInfo() {
-
-					var uomName = document.getElementById("uomName").value;
-					document.getElementById("uomCode").value = uomName;
-				}
-
-
-
-				function limitDecimalPlaces(e, count) {
-					if (e.target.value.indexOf('.') == -1) {return;}
-					if ((e.target.value.length - e.target.value.indexOf('.')) > count) {
-						e.target.value = parseFloat(e.target.value).toFixed(count);
-					}
-				}
-			</script>
+	</script>
 
 	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-				$("#itemMasterForm").validate({
-					ignoreTitle: true
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
-				
-				function selectStore(){
-					var storeCode = document.getElementById("storeName").value;
-					document.getElementById("storeCode").value = storeCode;
-				}
+			} else {
+				console.log("ajax request : " + message);
+			}
 
-			</script>
+		});
+
+		function getUomNameInfo() {
+
+			var uomName = document.getElementById("uomName").value;
+			document.getElementById("uomCode").value = uomName;
+		}
+
+		function limitDecimalPlaces(e, count) {
+			if (e.target.value.indexOf('.') == -1) {
+				return;
+			}
+			if ((e.target.value.length - e.target.value.indexOf('.')) > count) {
+				e.target.value = parseFloat(e.target.value).toFixed(count);
+			}
+		}
+	</script>
+
+	<script>
+		$("#itemMasterForm").validate({
+			ignoreTitle : true
+		});
+
+		function selectStore() {
+			var storeCode = document.getElementById("storeName").value;
+			document.getElementById("storeCode").value = storeCode;
+		}
+	</script>
 
 
 
