--- a/src/main/resources/templates/layouts/Master/moduleMaster.html
+++ b/src/main/resources/templates/layouts/Master/moduleMaster.html
@@ -59,7 +59,7 @@
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i> Admin</a></li>
 							<li><a href="#">Module</a></li>
-							<li class="active">Master</li>
+							<li class="active">Add page</li>
 						</ol>
 					</section>
 
@@ -67,30 +67,52 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="moduleMasterForm" role="form" th:action="@{/module/}"
+							method="POST" th:object="${module}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
+
+									<div class="box-header with-border text-right">
+
+										<button type="submit" id="submit"
+											class="btn btn-primary btn-sm">
+											<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+										</button>
+										<button type="reset" value="reset"
+											class="btn btn-secondary btn-sm">
+											<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+										</button>
+
+										<a th:href="@{/module/list}"
+											class="btn btn-success btn-sm"> <i class="fa fa-list"
+											aria-hidden="true"></i> View All
+										</a>
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="moduleMasterForm" role="form"
-												th:action="@{/module/}" method="POST" th:object="${module}">
+
+									</div>
+
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
@@ -122,8 +144,7 @@
 														<div class="custom-controls-stacked">
 
 															<label class="radio-inline"> <input type="radio"
-																value="Y" name="active" checked>
-																Active &nbsp;
+																value="Y" name="active" checked> Active &nbsp;
 															</label> <label class="radio-inline"> <input type="radio"
 																value="N" name="active">Inactive
 															</label>
@@ -135,30 +156,20 @@
 
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
 
-
-											</form>
-
+											</div>
+											<!-- /.box -->
 
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/module/list}">View All Module</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
-
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
