--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -74,32 +74,52 @@ iframe {
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/mrn/}" th:object="${mrn}"
+							method="POST">
+
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+											</button>
+											<button type="reset" value="reset"
+												class="btn btn-secondary btn-sm">
+												<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+											</button>
+
+											<a th:href="@{/mrn/list}"
+												class="btn btn-success btn-sm"> <i class="fa fa-list"
+												aria-hidden="true"></i> View All
+											</a>
 
 
 
-									<div class="col-md-12 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
+										</div>
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
+										<div class="col-md-12 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
 
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/mrn/}" th:object="${mrn}"
-												method="POST">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
 
 												<div class="box">
 													<h5 class="box-title">Material Receipt Master</h5>
@@ -375,8 +395,8 @@ iframe {
 																		<!-- Account Name -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo"
-																			name="mrnDetails[0].store" title="account name">
+																			id="orderIndentNumberPo" name="mrnDetails[0].store"
+																			title="account name">
 																				<option value="">Select</option>
 																				<option th:each="store :  ${storeList}"
 																					th:text="${store.description}"
@@ -447,7 +467,7 @@ iframe {
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="totalInrCost0" title="total inr cost" step="0.25"
-																			value="0.00" name="mrnDetail[0].poNetVal"  readonly></td>
+																			value="0.00" name="mrnDetail[0].poNetVal" readonly></td>
 
 																		<!-- remarks   -->
 																		<td><input type="text"
@@ -457,7 +477,8 @@ iframe {
 																		<!-- dol -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
-																			id="dol0" name="mrnDetails[0].dolStatus" title="dol" readonly>
+																			id="dol0" name="mrnDetails[0].dolStatus" title="dol"
+																			readonly>
 																				<option value="">Select</option>
 																				<option value="Y">YES</option>
 																				<option value="N">NO</option>
@@ -631,27 +652,20 @@ iframe {
 												<!-- end detail details block  -->
 
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
-											</form>
 
 
+											</div>
+											<!-- /.box -->
+
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/mrn/list}">View All MRN</a>
-										</div>
+
+
+
 									</div>
 
-
-
 								</div>
-
 							</div>
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
