--- a/src/main/resources/templates/layouts/Master/mrnTaxInfo.html
+++ b/src/main/resources/templates/layouts/Master/mrnTaxInfo.html
@@ -65,8 +65,8 @@ iframe {
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Warehouse</a></li>
+							<li><a href="#">Mrn tax Info</a></li>
 							<li class="active">Blank page</li>
 						</ol>
 					</section>
